--- a/BDMIK story/settings.storyboard
+++ b/BDMIK story/settings.storyboard
@@ -101,13 +101,14 @@
                                                 <color key="textColor" systemColor="secondarySystemGroupedBackgroundColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9cf-SJ-jJI">
+                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9cf-SJ-jJI">
                                                 <rect key="frame" x="165" y="0.0" width="62" height="43"/>
                                             </switch>
                                         </subviews>
                                         <color key="backgroundColor" name="AccentColor"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="225" id="M7v-Gm-KWe"/>
+                                            <constraint firstItem="9cf-SJ-jJI" firstAttribute="leading" secondItem="5dv-5d-Uvq" secondAttribute="leading" constant="165" id="QwT-W7-KcH"/>
                                             <constraint firstAttribute="height" constant="43" id="oBs-kW-fir"/>
                                         </constraints>
                                     </stackView>
@@ -125,18 +126,22 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cnz-iz-Utc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2235" y="-135"/>
+            <point key="canvasLocation" x="2209" y="-135"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Settings-->
         <scene sceneID="dg4-mo-UnF">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bsG-m1-QTa" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="setting icon" id="syF-Sr-B6C"/>
+                <navigationController storyboardIdentifier="setting" title="Settings" automaticallyAdjustsScrollViewInsets="NO" id="bsG-m1-QTa" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="setting icon" selectedImage="setting icon" id="syF-Sr-B6C"/>
                     <toolbarItems/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="oX0-7W-qd3">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" name="AccentColor"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" name="AccentColor"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -270,93 +275,92 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="F4s-gn-Hui">
-                                <rect key="frame" x="77" y="391.5" width="260" height="113"/>
+                                <rect key="frame" x="77" y="348" width="260" height="200.5"/>
                                 <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M1J-mj-Dt2">
+                                        <rect key="frame" x="0.0" y="0.0" width="260" height="41.5"/>
+                                        <attributedString key="attributedText">
+                                            <fragment content="privacy">
+                                                <attributes>
+                                                    <font key="NSFont" size="36" name="Helvetica-Bold"/>
+                                                    <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                </attributes>
+                                            </fragment>
+                                        </attributedString>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uyV-hG-K7J">
-                                        <rect key="frame" x="0.0" y="0.0" width="260" height="31"/>
+                                        <rect key="frame" x="0.0" y="51.5" width="260" height="43"/>
                                         <subviews>
-                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4g2-jx-ArE">
-                                                <rect key="frame" x="0.0" y="0.0" width="51" height="31"/>
-                                                <color key="backgroundColor" name="logoRed"/>
-                                                <color key="onTintColor" systemColor="secondarySystemBackgroundColor"/>
-                                                <color key="thumbTintColor" name="logoRed"/>
-                                            </switch>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="   show username" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VIg-bp-gZq">
-                                                <rect key="frame" x="49" y="0.0" width="211" height="31"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="211" height="43"/>
                                                 <color key="backgroundColor" name="AccentColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="43" id="RjC-wz-w0T"/>
+                                                </constraints>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
                                                 <color key="textColor" systemColor="secondarySystemGroupedBackgroundColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qwk-R2-oAG">
+                                                <rect key="frame" x="211" y="0.0" width="51" height="43"/>
+                                            </switch>
                                         </subviews>
+                                        <color key="backgroundColor" name="AccentColor"/>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fdk-5x-hbl">
-                                        <rect key="frame" x="0.0" y="41" width="260" height="31"/>
+                                        <rect key="frame" x="0.0" y="104.5" width="260" height="43"/>
                                         <subviews>
-                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TuV-8Z-2fa">
-                                                <rect key="frame" x="0.0" y="0.0" width="51" height="31"/>
-                                                <color key="backgroundColor" name="logoRed"/>
-                                                <color key="onTintColor" systemColor="secondarySystemBackgroundColor"/>
-                                                <color key="thumbTintColor" name="logoRed"/>
-                                            </switch>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="   show my age" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R4V-UD-pzw">
-                                                <rect key="frame" x="49" y="0.0" width="211" height="31"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="211" height="43"/>
                                                 <color key="backgroundColor" name="AccentColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="43" id="GZm-8b-YlR"/>
+                                                </constraints>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
                                                 <color key="textColor" systemColor="secondarySystemGroupedBackgroundColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="v7j-RL-DR4">
+                                                <rect key="frame" x="211" y="0.0" width="51" height="43"/>
+                                            </switch>
                                         </subviews>
+                                        <color key="backgroundColor" name="AccentColor"/>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9yg-LS-7df">
-                                        <rect key="frame" x="0.0" y="82" width="260" height="31"/>
+                                        <rect key="frame" x="0.0" y="157.5" width="260" height="43"/>
                                         <subviews>
-                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sse-Tp-EbV">
-                                                <rect key="frame" x="0.0" y="0.0" width="51" height="31"/>
-                                                <color key="backgroundColor" name="logoRed"/>
-                                                <color key="onTintColor" systemColor="secondarySystemBackgroundColor"/>
-                                                <color key="thumbTintColor" name="logoRed"/>
-                                            </switch>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="   show gender" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3iI-UG-avW">
-                                                <rect key="frame" x="49" y="0.0" width="211" height="31"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="211" height="43"/>
                                                 <color key="backgroundColor" name="AccentColor"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
                                                 <color key="textColor" systemColor="secondarySystemGroupedBackgroundColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eRZ-J4-MUy">
+                                                <rect key="frame" x="211" y="0.0" width="51" height="43"/>
+                                            </switch>
                                         </subviews>
+                                        <color key="backgroundColor" name="AccentColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="43" id="0dI-1m-aKL"/>
+                                        </constraints>
                                     </stackView>
                                 </subviews>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M1J-mj-Dt2">
-                                <rect key="frame" x="77" y="342" width="260" height="42"/>
-                                <attributedString key="attributedText">
-                                    <fragment content="privacy">
-                                        <attributes>
-                                            <font key="NSFont" size="36" name="Helvetica-Bold"/>
-                                            <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                        </attributes>
-                                    </fragment>
-                                </attributedString>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="mum-JX-aj4"/>
                         <color key="backgroundColor" systemColor="secondarySystemGroupedBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="F4s-gn-Hui" firstAttribute="centerX" secondItem="cZU-Dc-pyu" secondAttribute="centerX" id="4Zc-JI-1KY"/>
-                            <constraint firstItem="M1J-mj-Dt2" firstAttribute="top" secondItem="mum-JX-aj4" secondAttribute="top" constant="254" id="4dd-Zb-HaN"/>
-                            <constraint firstItem="F4s-gn-Hui" firstAttribute="top" secondItem="M1J-mj-Dt2" secondAttribute="bottom" constant="7.5" id="4hy-zq-1Ki"/>
-                            <constraint firstItem="M1J-mj-Dt2" firstAttribute="leading" secondItem="F4s-gn-Hui" secondAttribute="leading" id="TRV-J6-zOd"/>
                             <constraint firstItem="F4s-gn-Hui" firstAttribute="centerY" secondItem="cZU-Dc-pyu" secondAttribute="centerY" id="VGL-Uc-dn3"/>
-                            <constraint firstItem="M1J-mj-Dt2" firstAttribute="trailing" secondItem="F4s-gn-Hui" secondAttribute="trailing" id="iLw-ae-v0c"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="bk3-DM-2lH"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ChY-hI-8Zc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3086" y="589"/>
+            <point key="canvasLocation" x="2968" y="589"/>
         </scene>
         <!--help-->
         <scene sceneID="3BB-ff-PYO">
@@ -437,20 +441,14 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nWV-nK-8es" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1737.68115942029" y="588.61607142857144"/>
+            <point key="canvasLocation" x="1567" y="589"/>
         </scene>
     </scenes>
     <resources>
         <image name="setting icon" width="50" height="50"/>
         <namedColor name="AccentColor">
-            <color red="0.82178896670000001" green="0.2117614746" blue="0.27841722969999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <color red="0.82200002670288086" green="0.21199999749660492" blue="0.27799999713897705" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
-        <namedColor name="logoRed">
-            <color red="0.71799999475479126" green="0.10199999809265137" blue="0.092000000178813934" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-        </namedColor>
-        <systemColor name="secondarySystemBackgroundColor">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="secondarySystemGroupedBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
